--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 
 	<h1>This is a heading!</h1>
 
+<a href="#">Go Here</a>
+<a href="#">Go There</a>
+
+<nav>
+	<ul>
+		<li><a href="#">Home</a></li>
+		<li><a href="#">About</a></li>
+		<li><a href="#">Contact</a></li>
+	</ul>
+</nav>
+
 </body>
 </html>
